syntax = "proto3";
option java_package = "io.lantern.model";
option go_package = "/protos";

message ServerInfo {
  string city = 1;
  string country = 2;
  string countryCode = 3;
}

message Bandwidth {
  int64 percent = 1; // [0, 100]
  int64 mibUsed = 2; // in MB
  int64 mibAllowed = 3; // in MB
  int64 ttlSeconds = 4; // number of seconds left before data reset
}

message AppData {
  string packageName = 1;
  string name = 2;
  bytes icon = 3;
  bool allowedAccess = 4;
}


message AppsData {
  repeated AppData appsList = 1;
}

message Device {
  string id = 1;
  string name = 2;
  int64 created = 3;
}



message Devices {
  repeated Device devices = 1;
}

message Plans {
  repeated Plan plan = 1;
}

message Plan {
  string id = 1;
  string description = 2;
  bool bestValue = 3;
  int64 usdPrice = 4;
  map<string, int64> price = 5;
  map<string, int64> expectedMonthlyPrice = 6;
  string totalCostBilledOneTime = 7;
  string oneMonthCost = 8;
  string totalCost = 9;
  string formattedBonus = 10;
  string renewalText = 11;
  map<string, int64> renewalBonusExpected = 13;
}

message PaymentProviders {
  string name = 1;
  repeated string logoUrls = 3;
  map<string, string> data = 4;
}

message PaymentMethod {
  string method = 1;
  repeated PaymentProviders providers = 2;
}

message User {
  int64 userId = 1;
  string email = 2;
  string telephone = 3;
  string userStatus = 4;
  string userLevel = 5;
  string locale = 6;
  int64 expiration = 7;
  repeated Device devices = 8;
  string code = 9;
  int64 expireAt = 10;
  string referral = 11;
  string token = 12;
  bool yinbiEnabled = 13;
  repeated string inviters = 14;
  repeated string invitees = 15;
  repeated Purchase purchases = 16;
}

message Purchase  {
  string plan = 1;
}



// API
message BaseResponse {
  string status = 1;
  string error = 2;
  string errorId = 3;
}

message PaymentRedirectRequest {
  string plan = 1;
  string provider = 2;
  string currency = 3;
  string email = 4;
  string deviceName = 5;
  string countryCode = 6;
  string locale = 7;
}

message RedeemResellerCodeRequest {
  string email = 1;
  string resellerCode = 2;
  string deviceName = 3;
  string currency = 4;
  string idempotencyKey = 5;
  string provider = 6;
}

message PaymentRedirectResponse {
  string status = 1;
  string error = 2;
  string errorId = 3;
  string redirect = 4;
}

message LinkResponse {
  int64 userID = 1;
  string token = 2;
  string status = 3;
  string error = 4;
  string errorId = 5;
}

// Config

message ChatOptions {
  bool on_boarding_status = 1;
  int32 accepted_terms_version = 2;
}

message ConfigOptions {
  bool development_mode = 1;
  string replica_addr = 2;
  string http_proxy_addr = 3;
  string socks_proxy_addr = 4;
  bool auth_enabled = 5;
  bool chat_enabled = 6;
  bool split_tunneling = 7;
  bool has_succeeding_proxy = 8;
  bool fetched_global_config = 9;
  bool fetched_proxies_config = 10;
  repeated Plan plans = 11;
  repeated PaymentMethod payment_methods = 12;
  Devices devices = 13;
  string sdk_version = 14;
  string app_version = 15;
  string device_id = 16;
  string expiration_date = 17;
  ChatOptions chat = 18;
  bool proxy_all = 19;
  string country = 20;
  bool is_user_logged_in = 21;
}